--- a/index.html
+++ b/index.html
@@ -1,11 +1,88 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Döküman</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Eda Işık Portfolio</title>
+    <link rel="stylesheet" href="./style/index.css" />
+    <link rel="stylesheet"
+    href=""https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+  </head>
+  <body>
+    <header>
+      <div class="logo">
+        <a href="index.html">EI</a>
+      </div>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="/about.html">About</a>
+        <a href="/projects.html">Projects</a>
+        <a href="/contact.html">Contact</a>
+      </nav>
+    </header>
+
+    <main class="container">
+      <div>
+        <span>Hello! I am <i>Eda Işık</i></span>
+        <h1>I'm a Front End Developer.</h1>
+        <br />
+        <p>
+          I graduated from Atilim University Information Systems Engineering
+          program in 2021.
+        </p>
+      </div>
+      <img src="/images/EdaPhoto.jpg" />
+    </main>
+
+    <section>
+      <h2><a href="/projects.html">PROJECTS</a></h2>
+      <div class="img-container">
+        <div>
+          <img class="images" src="/images/image1.jpg" alt="" />
+          <h4>Lorem</h4>
+          <p>Lorem, ipsum.</p>
+        </div>
+        <div>
+          <img class="images" src="/images/image2.jpg" alt="" />
+          <h4>Lorem</h4>
+          <p>Lorem, ipsum.</p>
+        </div>
+        <div>
+          <img class="images" src="/images/image3.jpg" alt="" />
+          <h4>Lorem</h4>
+          <p>Lorem, ipsum.</p>
+        </div>
+        <div>
+          <img class="images" src="./images/image4.jpg" alt="" />
+          <h4>Lorem</h4>
+          <p>Lorem, ipsum.</p>
+        </div>
+        <div>
+          <img class="images" src="./images/image5.jpg" alt="" />
+          <h4>Lorem</h4>
+          <p>Lorem, ipsum.</p>
+        </div>
+        <div>
+          <img class="images" src="./images/image6.jpg" alt="" />
+          <h4>Lorem</h4>
+          <p>Lorem, ipsum.</p>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <button><a href="/contact.html">Contact!</a></button> <br />
+      <p>E-mail: eda.isik95@hotmail.com</p>
+      <a href="https://www.github.com/edaisik/"
+        ><i class="fa-brands fa-github"></i
+      ></a>
+      <a href="https://www.linkedin.com/in/eda-isik/"
+        ><i class="fa-brands fa-linkedin"></i
+      ></a>
+    </footer>
+  </body>
 </html>
