--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eda Işık Portfolio</title>
     <link rel="stylesheet" href="./style/index.css" />
-    <link rel="stylesheet"
-    href=""https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -14,9 +16,7 @@
   </head>
   <body>
     <header>
-      <div class="logo">
-        <a href="index.html">EI</a>
-      </div>
+      <h2>EI</h2>
       <nav>
         <a href="index.html">Home</a>
         <a href="/about.html">About</a>
@@ -25,18 +25,21 @@
       </nav>
     </header>
 
-    <main class="container">
-      <div>
-        <span>Hello! I am <i>Eda Işık</i></span>
-        <h1>I'm a Front End Developer.</h1>
-        <br />
-        <p>
-          I graduated from Atilim University Information Systems Engineering
-          program in 2021.
-        </p>
+    <main>
+      <div class="img-text">
+        <img src="./images/EdaPhoto.jpg" alt="" />
+        <div class="text">
+          <span>Hello! I am <i>Eda Işık</i></span>
+          <h1>I'm a Front End Developer.</h1>
+          <br />
+          <p>
+            I graduated from Atilim University Information Systems Engineering
+            program in 2021.
+          </p>
+        </div>
       </div>
-      <img src="/images/EdaPhoto.jpg" />
     </main>
+    <hr />
 
     <section>
       <h2><a href="/projects.html">PROJECTS</a></h2>
@@ -74,6 +77,7 @@
       </div>
     </section>
 
+
     <footer>
       <button><a href="/contact.html">Contact!</a></button> <br />
       <p>E-mail: eda.isik95@hotmail.com</p>
@@ -86,3 +90,4 @@
     </footer>
   </body>
 </html>
+
